@@ -9,6 +9,7 @@
  */
 #include <stdio.h>
 #include <stdlib.h>
+#include <unistd.h>
 #include <openssl/err.h>
 #include <openssl/ssl.h>
 
