@@ -8,9 +8,10 @@
 */
 
 #include <stdio.h>
+#include <unistd.h>
 #include <fcntl.h>
 #include <sys/stat.h>
-#include <evp.h>
+#include <openssl/evp.h>
 
 #define STDIN     	0
 #define STDOUT    	1
@@ -47,9 +48,9 @@ void do_cipher(char *pw, int operation)
 {
 	char buf[BUFLEN];
 	char ebuf[BUFLEN + 8];
-	unsigned int ebuflen, rc;
+	unsigned int ebuflen; /* rc; */
         unsigned char iv[EVP_MAX_IV_LENGTH], key[EVP_MAX_KEY_LENGTH];
-	unsigned int ekeylen, net_ekeylen; 
+	/* unsigned int ekeylen, net_ekeylen;  */
 	EVP_CIPHER_CTX ectx;
         
 	memcpy(iv, INIT_VECTOR, sizeof(iv));
@@ -82,5 +83,3 @@ void do_cipher(char *pw, int operation)
 
 	write(STDOUT, ebuf, ebuflen); 
 }
-
-
