@@ -8,9 +8,10 @@
 */
 
 #include <stdio.h>
+#include <unistd.h>
 #include <fcntl.h>
 #include <sys/stat.h>
-#include <evp.h>
+#include <openssl/evp.h>
 
 #define STDIN     	0
 #define STDOUT    	1
@@ -44,7 +45,7 @@ void do_encode()
 {
 	char buf[BUFLEN];
 	char ebuf[BUFLEN+24];
-	unsigned int ebuflen, rc;
+	unsigned int ebuflen;
 	EVP_ENCODE_CTX ectx;
         
 	EVP_EncodeInit(&ectx);
@@ -78,7 +79,7 @@ void do_decode()
 {
  	char buf[BUFLEN];
  	char ebuf[BUFLEN+24];
-	unsigned int ebuflen, rc;
+	unsigned int ebuflen;
 	EVP_ENCODE_CTX ectx;
         
 	EVP_DecodeInit(&ectx);
