@@ -5,6 +5,9 @@
 
  Changes between 0.9.3 and 0.9.3a [?]  [xx May? 1999]
 
+  *) Updated some demos.
+     [Sean O Riordain]
+
   *) Add missing BIO_free at exit of pkcs12 application.
      [Wu Zhigang]
 
